Fix color cell vertical alignment

--- a/components/ColorCell/styles.module.scss
+++ b/components/ColorCell/styles.module.scss
@@ -9,6 +9,7 @@
 	cursor: pointer;
 	width: 1em;
 	height: 1em;
+	vertical-align: middle;
 	// Default to the text color for invalid colors.
 	background-color: currentColor;
 
